--- a/DotlessBundling/Views/Home/Index.cshtml
+++ b/DotlessBundling/Views/Home/Index.cshtml
@@ -2,6 +2,6 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>This is System.Web.Optimization.Less (dotless) bundling</h2>
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit fusce vel sapien elit in malesuada semper mi, id sollicitudin urna fermentum ut fusce varius nisl ac ipsum gravida vel pretium tellus.
